cabal-version:       >=1.10
name:                coquina
version:             0.1.0.0
synopsis:            Yet another shell monad.
description:         A simple monad for shelling out from Haskell programs.
bug-reports:         https://gitlab.com/obsidian.systems/coquina/issues
license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           2020 Obsidian Systems LLC
category:            shell
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     LICENSE

library
  hs-source-dirs: src
  build-depends: async
               , base
               , bytestring
               , containers
               , deepseq
               , directory
               , exceptions
               , filepath
               , mtl
               , process
               , stm
               , temporary
               , text
  exposed-modules: Coquina
  other-modules: Coquina.Internal
  ghc-options: -Wall
  default-language: Haskell2010

executable readme
  main-is: README.lhs
  build-depends: base
               , coquina
               , text
               , process
  ghc-options: -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: unit-tests.hs
  hs-source-dirs: test
  ghc-options: -O2 -Wall -rtsopts
  build-depends: base
               , async
               , coquina
               , exceptions
               , hspec
               , lens
               , mtl
               , process
               , stm
               , temporary
               , text
               , which
